# remindctl-mcp

./: .env.example  .mcp.json  LICENSE  README.md  Taskfile.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: publish.yml
docs/superpowers/plans/: 2026-03-15-apple-reminders-py.md
docs/superpowers/specs/: 2026-03-14-remindctl-mcp-design.md  2026-03-15-apple-reminders-py-design.md
plugin/: .mcp.json  README.md
plugin/.claude-plugin/: plugin.json
plugin/skills/text-to-reminders/: SKILL.md
plugin/skills/text-to-reminders/references/: examples.md
src/apple_reminders/: __init__.py  client.py  exceptions.py  install.py  models.py  runner.py
src/apple_reminders/api/: server.py
src/apple_reminders/mcp/: server.py
src/remindctl_mcp/: install.py  runner.py  server.py
tests/: test_api.py  test_client.py  test_integration.py  test_mcp.py  test_models.py  test_runner.py  test_tools.py
