[project]
name = "remindctl-mcp"
version = "0.1.7"
description = "MCP server wrapping remindctl for Apple Reminders"
license = "MIT"
requires-python = ">=3.11"
dependencies = ["fastmcp>=2.0.0"]

[project.scripts]
remindctl-mcp = "remindctl_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/remindctl_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ty>=0.0.23",
]
