[project]
name = "apple-reminders-py"
version = "0.2.1"
description = "Python SDK, MCP server, and REST API for Apple Reminders"
license = "MIT"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.0"]

[project.optional-dependencies]
mcp = ["fastmcp>=2.0.0"]
api = ["fastapi>=0.100", "uvicorn[standard]"]
all = ["apple-reminders-py[mcp,api]"]

[project.scripts]
remindctl-mcp = "apple_reminders.mcp.server:main"
remindctl-api = "apple_reminders.api.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apple_reminders"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ty>=0.0.23",
]
